# notebooklm_scraper

./: .env.example  .gitignore  AGENTS.md  README.md  feed.py  orchestrate.py  pyproject.toml  transcribe.py
cloud/: .env.example  README.md  app.py  pyproject.toml
local/: .env.example  README.md  chapters.py  convert.py  coverart.py  id3tag.py  migrate.py  pyproject.toml  scraper.py  summarize.py  transcribe.py
openspec/changes/archive/2026-05-31-cache-feed-xml/: design.md  tasks.md
openspec/changes/archive/2026-05-31-improve-logging-timestamps/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-31-incremental-per-file-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-31-mp3-to-m4a-migration/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-31-podcasting-2-0-chapters/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-31-strip-double-timestamps/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-31-wait-on-podcast-creation/: design.md  (+2 more)
openspec/changes/async-io-resized-chunks-streaming/: design.md  proposal.md  tasks.md
openspec/changes/cache-feed-xml/: proposal.md
openspec/specs/feed-caching/: spec.md
openspec/specs/m4a-audio-format/: spec.md
openspec/specs/migration/: spec.md
openspec/specs/mp4-chapters/: spec.md
openspec/specs/mp4-tagging/: spec.md
openspec/specs/orchestrator-logging/: spec.md
openspec/specs/per-file-pipeline/: spec.md
openspec/specs/podcasting-2-0-chapters/: spec.md
openspec/specs/scraper-wait-on-generation/: spec.md
(+11 files in other folders)
