[project]
name = "notebooklm-podcast-cloud"
version = "0.1.0"
description = "FastAPI server that exposes the NotebookLM podcast feed and streams audio from a synced Google Drive folder."
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false
